# moneyapp

./: .env.example  .flake8  .git-blame-ignore-revs  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  opentelemetry.config.yaml.example  otel-collector-config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/worflows/: flake8.yml
.github/workflows/: black.yml  code-style.yml  flake8.yml
accounts/: admin.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
app/: .env.example  manage.py  opentelemetry.config.yaml.example  requirements-dev.txt  requirements.txt
app/bank_accounts/: admin.py  apps.py  models.py  urls.py  views.py
app/moneyapp/: asgi.py  helpers.py  settings.py  urls.py  wsgi.py
app/recurring_expenses/: forms.py  models.py  urls.py  views.py
app/telemetry/: apps.py
app/transactions/: __init__.py  apps.py  models.py  urls.py  views.py
app/users/: forms.py  models.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  (+3 more)
bank_accounts/: urls.py
infra/: README.md  artifact_registry.tf  cloud_run.tf  data_inputs.tf  outputs.tf  terraform.tf  variables.tf
moneyapp/: settings.py  urls.py  wsgi.py
recurring_expenses/: apps.py  forms.py  models.py  urls.py  views.py
recurring_expenses/migrations/: 0002_rename_fee_recurringexpense_amount.py  0003_alter_recurringexpense_particulars.py
scripts/: push_image.sh
transactions/: apps.py  models.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_alter_transaction_id.py  0002_alter_transaction_user_date.py  (+1 more)
(+29 files in other folders)
